# forward

./: CMakeLists.txt  setup.py
anita/: CMakeLists.txt  WaveletDeconvolution.cc  WaveletDeconvolution.h
forward/: __init__.py  octave.py
include/forward/: forward.hpp
octave/: getbasismat.m  plotcoeffs.m  plotoptsc.m  waveletDecon.m  wienforwd.m
python/: CMakeLists.txt  PyForward.cpp
test/: test_deconvolve.py
